# computer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: computer.h
src/: CMakeLists.txt  alu.c  alu.h  gates.c  gates.h  transistor.c  transistor.h
tests/: CMakeLists.txt  test_computer.c
