include(CTest)
add_executable(test_computer test_computer.c)
target_include_directories(test_computer PUBLIC $PROJECT_SOURCE_DIR/include)
target_link_libraries(test_computer PUBLIC computer)

add_test(NAME "AND_Gate" COMMAND test_computer 0)
add_test(NAME "OR_Gate" COMMAND test_computer 1)
add_test(NAME "NOT_Gate" COMMAND test_computer 2)
add_test(NAME "NAND_Gate" COMMAND test_computer 3)
add_test(NAME "NOR_Gate" COMMAND test_computer 4)
add_test(NAME "XOR_Gate" COMMAND test_computer 5)
add_test(NAME "XNOR_Gate" COMMAND test_computer 6)
add_test(NAME "NOT_ALU" COMMAND test_computer 7)
add_test(NAME "AND_ALU" COMMAND test_computer 8)
add_test(NAME "OR_ALU" COMMAND test_computer 9)
add_test(NAME "ADD_ALU" COMMAND test_computer 10)
